[package]
name = "neo-nickbot"
version = "0.1.0"
edition = "2018"

[dependencies.anyhow]
version = "1.0.40"

[dependencies.serenity]
version = "0.10.7"
default-features = false
features = [
    "client", "gateway", "rustls_backend", "model", "unstable_discord_api",
    "cache",
]

[dependencies.tokio]
version = "1.6.0"
features = ["full"]
