[package]
name = "fcu-bots"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.51"

[dependencies.serenity]
version = "=0.10.9"
default-features = false
features = [
    "client", "gateway", "rustls_backend", "model", "unstable_discord_api",
    "cache",
]

[dependencies.tokio]
version = "1.14.0"
features = ["full"]
