[package]
name = "fcu-bots"
version = "0.2.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.66"

[dependencies.serenity]
version = "=0.10.9"
default-features = false
features = [
    "client", "gateway", "rustls_backend", "model", "unstable_discord_api",
    "cache",
]

[dependencies.tokio]
version = "1.22.0"
features = ["full"]
